[gd_scene load_steps=14 format=2]

[ext_resource path="res://components/dashboard/new_widget_popup/filter_widget.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/icons/icon_128_collapse.svg" type="Texture" id=2]
[ext_resource path="res://assets/icons/icon_128_expand.svg" type="Texture" id=3]
[ext_resource path="res://assets/icons/icon_128_delete_trashcan.svg" type="Texture" id=4]
[ext_resource path="res://assets/icons/icon_128_add.svg" type="Texture" id=5]
[ext_resource path="res://components/dashboard/shared/line_edit_update_on_focus_lost.gd" type="Script" id=6]
[ext_resource path="res://components/dashboard/new_widget_popup/data_source_container.gd" type="Script" id=7]
[ext_resource path="res://assets/theme/dark_theme.tres" type="Theme" id=8]
[ext_resource path="res://components/shared/combo_box.tscn" type="PackedScene" id=9]
[ext_resource path="res://components/elements/styled/icon_button.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/icons/icon_128_attention_round.svg" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 6.0
content_margin_right = 6.0
content_margin_top = 6.0
content_margin_bottom = 6.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.788235, 0.258824, 0.141176, 0.0392157 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.788235, 0.258824, 0.141176, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 6.0
expand_margin_right = 6.0
expand_margin_top = 6.0
expand_margin_bottom = 6.0

[node name="DatasourceContainer" type="PanelContainer"]
self_modulate = Color( 0.0392157, 0.145098, 0.247059, 1 )
margin_right = 523.0
margin_bottom = 355.0
theme = ExtResource( 8 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 517.0
margin_bottom = 349.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_right = 511.0
margin_bottom = 33.0

[node name="ExpandButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_right = 14.0
margin_bottom = 33.0
rect_min_size = Vector2( 14, 21 )
toggle_mode = true
pressed = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="ErrorIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
modulate = Color( 0.788235, 0.258824, 0.141176, 1 )
margin_left = 18.0
margin_top = 4.0
margin_right = 42.0
margin_bottom = 28.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 18.0
margin_top = 6.0
margin_right = 117.0
margin_bottom = 27.0
text = "Data Source 1"

[node name="DeleteButton" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 10 )]
margin_left = 478.0
margin_right = 511.0
hint_tooltip = "Delete Data Source"
size_flags_horizontal = 10
size_flags_vertical = 1
icon_tex = ExtResource( 4 )

[node name="DatasourceSettings" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_right = 511.0
margin_bottom = 427.0
size_flags_horizontal = 3

[node name="MetricsVBox" type="VBoxContainer" parent="VBoxContainer/DatasourceSettings"]
margin_right = 511.0
margin_bottom = 55.0
custom_constants/separation = 1

[node name="Label" type="Label" parent="VBoxContainer/DatasourceSettings/MetricsVBox"]
margin_right = 511.0
margin_bottom = 21.0
text = "Metric"

[node name="MetricsOptions" parent="VBoxContainer/DatasourceSettings/MetricsVBox" instance=ExtResource( 9 )]
margin_top = 22.0
margin_right = 511.0
margin_bottom = 55.0

[node name="FunctionVBox" type="VBoxContainer" parent="VBoxContainer/DatasourceSettings"]
margin_top = 59.0
margin_right = 511.0
margin_bottom = 114.0
custom_constants/separation = 1

[node name="Label" type="Label" parent="VBoxContainer/DatasourceSettings/FunctionVBox"]
margin_right = 511.0
margin_bottom = 21.0
text = "Aggregator"

[node name="FunctionComboBox" parent="VBoxContainer/DatasourceSettings/FunctionVBox" instance=ExtResource( 9 )]
margin_top = 22.0
margin_right = 511.0
margin_bottom = 55.0
items = [ "", "sum", "min", "max", "avg", "count", "sum_over_time", "min_over_time", "max_over_time", "avg_over_time", "count_over_time" ]

[node name="FilterHBox" type="HBoxContainer" parent="VBoxContainer/DatasourceSettings"]
margin_top = 118.0
margin_right = 511.0
margin_bottom = 213.0

[node name="FilterWidget" parent="VBoxContainer/DatasourceSettings/FilterHBox" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 511.0
margin_bottom = 95.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DatasourceSettings"]
margin_top = 217.0
margin_right = 511.0
margin_bottom = 272.0
custom_constants/separation = 1

[node name="Label" type="Label" parent="VBoxContainer/DatasourceSettings/VBoxContainer"]
margin_right = 511.0
margin_bottom = 21.0
text = "Date Offset"

[node name="DateOffsetLineEdit" type="LineEdit" parent="VBoxContainer/DatasourceSettings/VBoxContainer"]
margin_top = 22.0
margin_right = 511.0
margin_bottom = 55.0
script = ExtResource( 6 )

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxContainer/DatasourceSettings"]
margin_top = 276.0
margin_right = 511.0
margin_bottom = 331.0
custom_constants/separation = 1

[node name="Label" type="Label" parent="VBoxContainer/DatasourceSettings/VBoxContainer4"]
margin_right = 511.0
margin_bottom = 21.0
text = "Sum by"

[node name="ByLineEdit" type="LineEdit" parent="VBoxContainer/DatasourceSettings/VBoxContainer4"]
margin_top = 22.0
margin_right = 511.0
margin_bottom = 55.0
script = ExtResource( 6 )

[node name="VBoxContainer5" type="VBoxContainer" parent="VBoxContainer/DatasourceSettings"]
margin_top = 335.0
margin_right = 511.0
margin_bottom = 390.0
custom_constants/separation = 1

[node name="Label" type="Label" parent="VBoxContainer/DatasourceSettings/VBoxContainer5"]
margin_right = 511.0
margin_bottom = 21.0
text = "Legend"

[node name="LegendEdit" type="LineEdit" parent="VBoxContainer/DatasourceSettings/VBoxContainer5"]
margin_top = 22.0
margin_right = 511.0
margin_bottom = 55.0
script = ExtResource( 6 )

[node name="StackedCheckBox" type="CheckBox" parent="VBoxContainer/DatasourceSettings"]
margin_top = 394.0
margin_right = 511.0
margin_bottom = 427.0
pressed = true
text = "Stacked"

[node name="TextSearchSettings" type="VBoxContainer" parent="VBoxContainer"]
visible = false
margin_right = 511.0
margin_bottom = 256.0

[node name="Label" type="Label" parent="VBoxContainer/TextSearchSettings"]
margin_right = 511.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "Text"

[node name="TextLineEdit" type="LineEdit" parent="VBoxContainer/TextSearchSettings"]
margin_top = 25.0
margin_right = 511.0
margin_bottom = 58.0
size_flags_horizontal = 3
script = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TextSearchSettings"]
margin_top = 62.0
margin_right = 511.0
margin_bottom = 95.0

[node name="Label2" type="Label" parent="VBoxContainer/TextSearchSettings/HBoxContainer"]
margin_top = 6.0
margin_right = 235.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Kinds"

[node name="KindsComboBox" parent="VBoxContainer/TextSearchSettings/HBoxContainer" instance=ExtResource( 9 )]
margin_left = 239.0
margin_right = 474.0
margin_bottom = 33.0
size_flags_horizontal = 3
items = [  ]

[node name="Add" parent="VBoxContainer/TextSearchSettings/HBoxContainer" instance=ExtResource( 10 )]
margin_left = 478.0
margin_right = 511.0
hint_tooltip = "Add Kind"
icon_tex = ExtResource( 5 )
icon_margin = 5

[node name="LineEditKinds" type="LineEdit" parent="VBoxContainer/TextSearchSettings"]
margin_top = 99.0
margin_right = 511.0
margin_bottom = 132.0
script = ExtResource( 6 )

[node name="Label2" type="Label" parent="VBoxContainer/TextSearchSettings"]
margin_top = 136.0
margin_right = 511.0
margin_bottom = 157.0
text = "Filters"

[node name="TextFiltersLineEdit" type="LineEdit" parent="VBoxContainer/TextSearchSettings"]
margin_top = 161.0
margin_right = 511.0
margin_bottom = 194.0
script = ExtResource( 6 )

[node name="Label3" type="Label" parent="VBoxContainer/TextSearchSettings"]
margin_top = 198.0
margin_right = 511.0
margin_bottom = 219.0
text = "List"

[node name="ListLineEdit" type="LineEdit" parent="VBoxContainer/TextSearchSettings"]
margin_top = 223.0
margin_right = 511.0
margin_bottom = 256.0
script = ExtResource( 6 )

[node name="TwoEntryAggregateSettings" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 511.0
margin_bottom = 244.0

[node name="Label" type="Label" parent="VBoxContainer/TwoEntryAggregateSettings"]
margin_right = 511.0
margin_bottom = 21.0
text = "Kind"

[node name="KindComboBox" parent="VBoxContainer/TwoEntryAggregateSettings" instance=ExtResource( 9 )]
margin_top = 25.0
margin_right = 511.0
margin_bottom = 58.0

[node name="FirstEntryLabel" type="Label" parent="VBoxContainer/TwoEntryAggregateSettings"]
margin_top = 62.0
margin_right = 511.0
margin_bottom = 83.0
text = "1st Category"

[node name="EntryContainer1" type="HBoxContainer" parent="VBoxContainer/TwoEntryAggregateSettings"]
margin_top = 87.0
margin_right = 511.0
margin_bottom = 120.0

[node name="Entry1LineEdit" type="LineEdit" parent="VBoxContainer/TwoEntryAggregateSettings/EntryContainer1"]
margin_right = 243.0
margin_bottom = 33.0
size_flags_horizontal = 3
placeholder_text = "/ancestors.account.reported.name"
script = ExtResource( 6 )

[node name="Label" type="Label" parent="VBoxContainer/TwoEntryAggregateSettings/EntryContainer1"]
margin_left = 247.0
margin_top = 6.0
margin_right = 264.0
margin_bottom = 27.0
text = "as"

[node name="Entry1Alias" type="LineEdit" parent="VBoxContainer/TwoEntryAggregateSettings/EntryContainer1"]
margin_left = 268.0
margin_right = 511.0
margin_bottom = 33.0
size_flags_horizontal = 3
placeholder_text = "cloud_name"
script = ExtResource( 6 )

[node name="SecondEntryLabel" type="Label" parent="VBoxContainer/TwoEntryAggregateSettings"]
margin_top = 124.0
margin_right = 511.0
margin_bottom = 145.0
text = "2nd Category"

[node name="EntryContainer2" type="HBoxContainer" parent="VBoxContainer/TwoEntryAggregateSettings"]
margin_top = 149.0
margin_right = 511.0
margin_bottom = 182.0

[node name="Entry2LineEdit" type="LineEdit" parent="VBoxContainer/TwoEntryAggregateSettings/EntryContainer2"]
margin_right = 243.0
margin_bottom = 33.0
size_flags_horizontal = 3
placeholder_text = "instance_type"
script = ExtResource( 6 )

[node name="Label" type="Label" parent="VBoxContainer/TwoEntryAggregateSettings/EntryContainer2"]
margin_left = 247.0
margin_top = 6.0
margin_right = 264.0
margin_bottom = 27.0
text = "as"

[node name="Entry2Alias" type="LineEdit" parent="VBoxContainer/TwoEntryAggregateSettings/EntryContainer2"]
margin_left = 268.0
margin_right = 511.0
margin_bottom = 33.0
size_flags_horizontal = 3
placeholder_text = "type"
script = ExtResource( 6 )

[node name="FunctionLabel" type="Label" parent="VBoxContainer/TwoEntryAggregateSettings"]
margin_top = 186.0
margin_right = 511.0
margin_bottom = 207.0
text = "Function"

[node name="FunctionContainer" type="HBoxContainer" parent="VBoxContainer/TwoEntryAggregateSettings"]
margin_top = 211.0
margin_right = 511.0
margin_bottom = 244.0

[node name="FunctionLineEdit" type="LineEdit" parent="VBoxContainer/TwoEntryAggregateSettings/FunctionContainer"]
margin_right = 243.0
margin_bottom = 33.0
size_flags_horizontal = 3
placeholder_text = "sum(1)"
script = ExtResource( 6 )

[node name="Label" type="Label" parent="VBoxContainer/TwoEntryAggregateSettings/FunctionContainer"]
margin_left = 247.0
margin_top = 6.0
margin_right = 264.0
margin_bottom = 27.0
text = "as"

[node name="FunctionAlias" type="LineEdit" parent="VBoxContainer/TwoEntryAggregateSettings/FunctionContainer"]
margin_left = 268.0
margin_right = 511.0
margin_bottom = 33.0
size_flags_horizontal = 3
placeholder_text = "instances"
script = ExtResource( 6 )

[node name="QueryEditVBox" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 248.0
margin_right = 511.0
margin_bottom = 340.0

[node name="QueryLabel" type="Label" parent="VBoxContainer/QueryEditVBox"]
margin_right = 511.0
margin_bottom = 21.0
text = "Query"

[node name="QueryEdit" type="TextEdit" parent="VBoxContainer/QueryEditVBox"]
margin_top = 25.0
margin_right = 511.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 30 )
wrap_enabled = true
caret_blink = true

[node name="QueryUpdateButton" type="Button" parent="VBoxContainer/QueryEditVBox"]
margin_left = 389.0
margin_top = 59.0
margin_right = 511.0
margin_bottom = 92.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Update Query"

[node name="Warning" type="Panel" parent="."]
visible = false
margin_left = 6.0
margin_top = 6.0
margin_right = 517.0
margin_bottom = 826.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[connection signal="toggled" from="VBoxContainer/HBoxContainer/ExpandButton" to="." method="_on_ExpandButton_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="option_changed" from="VBoxContainer/DatasourceSettings/MetricsVBox/MetricsOptions" to="." method="_on_MetricsOptions_option_changed"]
[connection signal="option_changed" from="VBoxContainer/DatasourceSettings/FunctionVBox/FunctionComboBox" to="." method="_on_FunctionComboBox_option_changed"]
[connection signal="filter_changed" from="VBoxContainer/DatasourceSettings/FilterHBox/FilterWidget" to="." method="_on_FilterWidget_filter_changed"]
[connection signal="text_entered" from="VBoxContainer/DatasourceSettings/VBoxContainer/DateOffsetLineEdit" to="." method="_on_DateOffsetLineEdit_text_entered"]
[connection signal="text_entered" from="VBoxContainer/DatasourceSettings/VBoxContainer4/ByLineEdit" to="." method="_on_ByLineEdit_text_entered"]
[connection signal="text_entered" from="VBoxContainer/DatasourceSettings/VBoxContainer5/LegendEdit" to="." method="_on_LegendEdit_text_entered"]
[connection signal="toggled" from="VBoxContainer/DatasourceSettings/StackedCheckBox" to="." method="_on_StackedCheckBox_toggled"]
[connection signal="text_entered" from="VBoxContainer/TextSearchSettings/TextLineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="option_changed" from="VBoxContainer/TextSearchSettings/HBoxContainer/KindsComboBox" to="." method="_on_KindsComboBox_option_changed"]
[connection signal="text_entered" from="VBoxContainer/TextSearchSettings/LineEditKinds" to="." method="_on_LineEdit2_text_entered"]
[connection signal="text_entered" from="VBoxContainer/TextSearchSettings/TextFiltersLineEdit" to="." method="_on_LineEdit3_text_entered"]
[connection signal="text_entered" from="VBoxContainer/TextSearchSettings/ListLineEdit" to="." method="_on_LineEdit4_text_entered"]
[connection signal="option_changed" from="VBoxContainer/TwoEntryAggregateSettings/KindComboBox" to="." method="_on_KindComboBox_option_changed"]
[connection signal="text_entered" from="VBoxContainer/TwoEntryAggregateSettings/EntryContainer1/Entry1LineEdit" to="." method="_on_Entry1LineEdit_text_entered"]
[connection signal="text_entered" from="VBoxContainer/TwoEntryAggregateSettings/EntryContainer1/Entry1Alias" to="." method="_on_Entry1Alias_text_entered"]
[connection signal="text_entered" from="VBoxContainer/TwoEntryAggregateSettings/EntryContainer2/Entry2LineEdit" to="." method="_on_Entry2LineEdit_text_entered"]
[connection signal="text_entered" from="VBoxContainer/TwoEntryAggregateSettings/EntryContainer2/Entry2Alias" to="." method="_on_Entry2Alias_text_entered"]
[connection signal="text_entered" from="VBoxContainer/TwoEntryAggregateSettings/FunctionContainer/FunctionLineEdit" to="." method="_on_FunctionLineEdit_text_entered"]
[connection signal="text_entered" from="VBoxContainer/TwoEntryAggregateSettings/FunctionContainer/FunctionAlias" to="." method="_on_FunctionAlias_text_entered"]
[connection signal="cursor_changed" from="VBoxContainer/QueryEditVBox/QueryEdit" to="." method="_on_QueryEdit_cursor_changed"]
[connection signal="gui_input" from="VBoxContainer/QueryEditVBox/QueryEdit" to="." method="_on_QueryEdit_gui_input"]
[connection signal="item_rect_changed" from="VBoxContainer/QueryEditVBox/QueryEdit" to="." method="_on_QueryEdit_item_rect_changed"]
[connection signal="text_changed" from="VBoxContainer/QueryEditVBox/QueryEdit" to="." method="_on_QueryEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/QueryEditVBox/QueryUpdateButton" to="." method="execute_query_edit"]
